image extension changed / header fixed / code aligned

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     padding-top: 150px;
     padding-bottom: 50px;
-    min-height: calc(100vh - 360px);
+    min-height: calc(100vh - 300px);
 }
 
 .all-cart-items {
